<resources>
    <string name="app_name">ColorMyView</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_five">Box Five</string>
    <string name="box_four">Box Four</string>
    <string name="tap_the_screen_and_buttons">Tap the screen and buttons</string>
    <string name="how_to_play">How To Play</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
</resources>