<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/boxOneText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/black"
        android:fontFamily="@font/roboto"
        android:text="@string/box_one"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/boxTwoText"
        style="@style/boxStyle"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/box_two"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxOneText"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/boxThreeText"
        style="@style/boxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/box_three"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/boxFourText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toTopOf="@+id/boxTwoText"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/boxFourText"
        style="@style/boxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/box_four"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/boxFiveText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toBottomOf="@+id/boxThreeText"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/boxFiveText"
        style="@style/boxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/box_five"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/boxTwoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toBottomOf="@+id/boxFourText"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/howToPlayText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/how_to_play"
        app:layout_constraintBaseline_toBaselineOf="@+id/rulesText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rulesText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tap_the_screen_and_buttons"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/howToPlayText"
        app:layout_constraintTop_toBottomOf="@+id/boxTwoText"
        app:layout_constraintVertical_bias="0.224" />

    <Button
        android:id="@+id/redButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/red"
        app:layout_constraintBaseline_toBaselineOf="@+id/yellowButton"
        app:layout_constraintEnd_toStartOf="@+id/yellowButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yellowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/greenButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/redButton"
        app:layout_constraintTop_toBottomOf="@+id/rulesText"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/greenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/green"
        app:layout_constraintBaseline_toBaselineOf="@+id/yellowButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yellowButton" />

</androidx.constraintlayout.widget.ConstraintLayout>